# rust_game_proto

./: .gitignore  Cargo.toml  README.md  build.rs
assets/: pallet_town_tile_map.json
build_assets/: pallet_town_tile_map.json
build_assets/tiled/exports/: pallet_town.json  varrock.json
build_assets/tiled/maps/: pallet_town.tmx  varrock.tmx
src/: main.rs
src/config/: log.rs  mod.rs
src/context/: factory.rs  mod.rs
src/error/: handler.rs  mod.rs  types.rs
src/filesystem/: factory.rs  mod.rs
src/game/: game.rs  game_loop.rs  game_state.rs  mod.rs
src/game/context/: factory.rs  mod.rs
src/game/ecs/components/: current_position.rs  door.rs  drawable.rs  facing_direction.rs  id.rs  interactable.rs  is_static.rs  mod.rs  player.rs  real_position.rs  sprite_sheet.rs  target_position.rs  timer.rs
src/game/ecs/resources/: camera.rs  camera_bounds.rs  delta_time.rs  door_request.rs  mod.rs  player_movement_request.rs  should_update.rs  tile_map.rs
src/game/ecs/systems/: animate_background_system.rs  animate_system.rs  fill_tile_map_to_draw_system.rs  follow_player_system.rs  mod.rs  move_background_draw_param_system.rs  move_current_position_system.rs  move_player_target_position_system.rs  print_system.rs  update_background_tiles_system.rs  update_draw_param_system.rs  update_facing_sprite_system.rs  update_sprite_sheet_draw_param_system.rs
src/game/events/: gilrs_events.rs  mod.rs  winit_events.rs
src/game/input/: mod.rs  types.rs
src/game/maps/: mod.rs
src/game/render/: mod.rs  state.rs  target.rs
src/game/save/: mod.rs  types.rs
src/game/scenes/: in_game_scene.rs  main_menu_scene.rs  mod.rs  overworld_scene.rs  pallet_town_overworld_scene.rs  pause_menu_scene.rs  text_box_scene.rs  types.rs
src/game/scenes/overworld/: mod.rs  overworld_scene.rs
src/game/scenes/overworld/overworld_maps/: mod.rs  pallet_town_overworld_scene.rs  varrock_overworld_scene.rs
src/game/settings/: mod.rs  serialize.rs  types.rs
src/game/world/: mod.rs
src/utils/: mod.rs
