[package]
name = "rust_game_proto"
version = "0.1.0"
authors = ["Adam Bates"] # TODO: Replace with studio name
edition = "2018"

[build-dependencies]
serde_json = "~1.0.61"
bincode = "~1.3.1"
serde = "~1.0"

[dependencies]
directories = "~3.0.1"
toml = "~0.5.8"
bincode = "~1.3.1"
serde = "~1.0"
serde_derive = "~1.0"
serde_with = "~1.6.0"
nalgebra = "~0.24.0"

specs = "~0.16.1"
specs-derive = "~0.4.1"

# Custom branch off master @ ~0.6.0
#  - private repo: https://github.com/adam-bates/custom-ggez.git
ggez = { path = "../ggez" }

# Needs to be compatible with ggez
winit = { version = "~0.24.0", features = ["serde"] }
gilrs = { version = "~0.8.0", features = ["serde-serialize"] }

chrono = "~0.4.19"

# set compile-time log level to warn in release, and debug in debug
log = { version = "~0.4.11", features = ["max_level_debug", "release_max_level_warn"] }
fern = "~0.6.0"
